# AIfred

./: README.md  main.py  pyproject.toml
Alfred_clever_lamp/scripts/: my_functions.py  stop_cast.json  stop_cast.pkl
Alfred_clever_lamp/src/: brodcast_marker.py  clever_lamp.py  computer_vision.py
alfred_clever_lamp/: CMakeLists.txt  package.xml
alfred_clever_lamp/launch/: demo.launch  main.launch
alfred_clever_lamp/msg/: Mode.msg  PointingObject.msg  UrlToOpen.msg
alfred_clever_lamp/scripts/: record_mouse_clicks.py  stop_cast.json
alfred_clever_lamp/src/: CV1_detect_pointing.py  CV1_pub_mode.py  CV2_detect_pointing.py  CV2_process_image.py  CV3_chromcast.py  CV3_open_mode.py  CV4_process_img.py  CV5_open_urls.py  R1_brodcast_marker.py  R2_move_robot.py  computer_vision.py  detect_pointing.py  move_robot_on_TUI.py  process_image.py
