[project]
name = "aifred-clever-lamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "google-api-python-client>=2.188.0",
    "mediapipe<0.10.30",
    "opencv-python>=4.13.0.90",
    "pillow>=10.4.0",
    "pyautogui>=0.9.54",
    "python-dotenv>=1.0.1",
    "requests>=2.32.4",
]
